--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
